Update EventParser to parse HTML elements correctly