@@ -3,45 +3,26 @@ package com.valuesoft.model;
 
 public class Event {
 
-    private final String title;
+    private final String teams;
     private final String league;
     private final String startTime;
-    private final String odd1;
-    private final String odd2;
+    private final String odds;
 
-    public Event(String title, String league, String startTime, String odd1, String odd2) {
-        this.title = title;
+    public Event(String teams, String league, String startTime, String odds) {
+        this.teams = teams;
         this.league = league;
         this.startTime = startTime;
-        this.odd1 = odd1;
-        this.odd2 = odd2;
+        this.odds = odds;
     }
 
-    public String prettyPrint() {
-        return String.format(
-                "Событие: %s\nЛига: %s\nНачало: %s\nКоэффициенты: %s | %s\n",
-                title, league, startTime, odd1, odd2
-        );
+    public String pretty() {
+        return """
+                ------------------------------
+                Match: %s
+                League: %s
+                Start Time: %s
+                Odds: %s
+                ------------------------------
+                """.formatted(teams, league, startTime, odds);
     }
-
-    public String getTitle() {
-        return title;
-    }
-
-    public String getLeague() {
-        return league;
-    }
-
-    public String getStartTime() {
-        return startTime;
-    }
-
-    public String getOdd1() {
-        return odd1;
-    }
-
-    public String getOdd2() {
-        return odd2;
-    }
-
 }
